--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/core": "2.2.1",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
+    "@covalent/core": "^0.10.2",
     "core-js": "2.4.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.7.2"
